<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bergmkyl.osu_pokedex.PostPokemonActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/pokemon_name"
            android:hint="@string/post_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/pokemon_weight"
            android:hint="@string/post_weight_hint"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/pokemon_height"
            android:hint="@string/post_height_hint"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/pokemon_types"
            android:hint="@string/post_types_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/postPokemonBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_pokemon"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
