<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bergmkyl.osu_pokedex.PutTrainerActivity">

    <EditText
        android:id="@+id/trainer_name"
        android:hint="@string/post_name_trainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/trainer_hometown"
        android:hint="@string/post_hometown_trainer"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/trainer_num_badges"
        android:hint="@string/post_badges_trainer"
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/putTrainerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/put_trainer"/>
    <ListView
        android:id="@+id/trainer_put_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
    </ListView>
</LinearLayout>
