<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bergmkyl.osu_pokedex.PostTrainerActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/trainer_name"
            android:hint="@string/post_name_trainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/trainer_num_badges"
            android:hint="@string/post_badges_trainer"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/trainer_hometown"
            android:hint="@string/post_hometown_trainer"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/post_trainer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_trainer"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
